--- a/static/styles.css
+++ b/static/styles.css
@@ -1,50 +1,86 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    background-color: #1c1c1c;
+    color: #ffffff;
+    height: 100%;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
+html {
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+    height: 100vh;
 }
 
-main {
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: #090909;
+}
+
+.input-output {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    background-color: #1a1a1a;
+    height: 100%;
+}
+
+.input-section {
+    flex-grow: 1;
+    background-color: #1a1a1a;
+    padding-right: 1px;
+}
+
+.input-section textarea {
+    transition: height 0.2s ease-in-out;
+    resize: none;
+    width: 100%;
+    min-height: 20px;
+    max-height: 500px;
+    background-color: #1a1a1a;
+    color: #ffffff;
+    border: 1px solid #474747;
+    box-sizing: border-box;
+}
+
+.output-section {
+    background-color: #1a1a1a;
+    flex-grow: 4;
+    height: 100%;
+    padding-right: 1px;
+}
+
+.output-section textarea {
+    resize: none;
+    background-color: #1a1a1a;
+    color: #ffffff;
+    width: 100%;
+    height: 70%;
+    overflow-y: auto;
+    border: 1px solid #474747;
+    box-sizing: border-box;
+
+}
+
+.settings {
+    background-color: #1a1a1a;
+    padding: 30px;
+    padding-top: 65px;
+}
+
+.settings-section {
+    padding: 20px;
+    background-color: #222222;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.settings-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-section {
-    background-color: #f7f7f7;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-h2 {
-    margin-top: 0;
-}
-
-input,
-select,
-textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-}
-
-button {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #444;
+    gap: 30px;
 }
