changed background color

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,7 @@ body {
     margin-right: 20px;
     margin-top: 0px;
     margin-bottom: 0px;
-    background-color: #1c1c1c;
+    background-color: #1a1a1a;
     color: #ffffff;
     height: 100%;
 }
